tests/fixtures/invalid/pow_none_str_int.py
# Cannot call pow() with None, Str, Int
x = pow(None, "hello", 1)
